# SlurmSession

./: .gitignore  ReadMe.md  license.txt  pyproject.toml
.github/workflows/: publish_release.yml  report_coverage.yml  test_commit.yml
slurmsession/: config.py  defaults.yaml  hacks.py  main.py  meta.py
tests/: ReadMe.md  test_cli.py  test_config.py
